--- a/react-admin/public/index.html
+++ b/react-admin/public/index.html
@@ -40,4 +40,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "hRcvraiM1WAVUf3PYgmkq",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="hRcvraiM1WAVUf3PYgmkq"
+    domain="www.chatbase.co"
+    defer>
+    </script>
 </html>
